tests/ui/basic/slice_reversed_bounds.stderr
error: slice start (3) is greater than end (1)
 --> tests/ui/basic/slice_reversed_bounds.rs:7:10
  |
7 |         x[3..1]
  |          ^^^^^^
